[package]
name = "whatgrad"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Ergonomic reverse mode autodifferentiation"
homepage = "https://github.com/lewis-carson/whatgrad"
documentation = "https://github.com/lewis-carson/whatgrad"
repository = "https://github.com/lewis-carson/whatgard"
readme = "README.md"
keywords = ["autodiff", "differentiation"]


[dependencies]
num-traits = "0.2.15"
